# adhoc_trial

./: README.md  pyproject.toml
data/processed/: sales_data.csv
data/raw/: example.csv
notebooks/: some_analysis.py
notebooks/someone/: analysis_01.py
src/adhoc_trial/: __init__.py
src/data_processor/: loader.py  process.py  schema.py
tests/data_processor/: test_process.py
