[project]
name = "adhoc-trial"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "numpy>=2.0.1",
    "matplotlib>=3.9.2",
    "pandas>=2.2.2",
    "pandera>=0.20.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/adhoc_trial"]
